fixed spacing in footer and added more colours in body

--- a/css/custom.css
+++ b/css/custom.css
@@ -22,8 +22,8 @@ $brand-danger:          #FC7100;*/
 
 @font-face {
   font-family: 'Open Sans Bold';
-  src: url('../fonts/OpenSansBold-Regular-webfont.eot');
-  src: url('../fonts/OpenSansBold-Regular-webfont.woff') format('woff'), url('../fonts/OpenSansBold-Regular-webfont.ttf') format('truetype'), url('../fonts/OpenSansBold-Regular-webfont.svg') format('svg');
+  src: url('../fonts/OpenSans-Bold-webfont.eot');
+  src: url('../fonts/OpenSans-Bold-webfont.woff') format('woff'), url('../fonts/OpenSans-Bold-webfont.ttf') format('truetype'), url('../fonts/OpenSans-Bold-webfont.svg') format('svg');
   font-weight: bold;
   font-style: normal;
 }
@@ -60,20 +60,34 @@ h1, h2 {
 }
 
 h3, h4, h5, h6 {
-  font-family: 'Open Sans', 'Helvetica', sans-serif;
-  font-weight: 700;
+  font-family: 'Open Sans Bold', 'Helvetica', sans-serif;
   font-size: 1.4rem;
 }
 
 section {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  padding: 3rem;
   display: flex;
   justify-content: center;
 }
 
 section:nth-of-type(2n) {
-  background-color: #F3F4F8;
+  background-color: rgba(255,188,26,0.15);
+}
+
+section:nth-of-type(4n+2) {
+  background-color: rgba(255,188,26,0.15); /*yellow*/
+}
+
+section:nth-of-type(4n+4) {
+  background-color: rgba(183,213,0,0.15); /*green*/
+}
+
+section:nth-of-type(4n+6) {
+  background-color: rgba(5,198,180,0.15); /*blue*/
+}
+
+section:nth-of-type(4n+8) {
+  background-color: rgba(252,113,0,0.15); /*orange*/
 }
 
 .content {
@@ -85,6 +99,7 @@ section:nth-of-type(2n) {
   font-size: 0.8rem;
   text-transform: uppercase;
   text-align: center;
+  font-family: 'Open Sans Bold', 'Helvetica', sans-serif;
 }
 
 .lead {
@@ -92,6 +107,7 @@ section:nth-of-type(2n) {
 }
 
 .bold {
+  font-family: 'Open Sans Bold', 'Helvetica', sans-serif;
   font-weight: bold;
 }
 
@@ -115,6 +131,7 @@ section:nth-of-type(2n) {
   background: rgba(255,255,255,0.7);
   padding: 2rem;
   display: flex;
+  flex-wrap: wrap;
 }
 
 #page-header .container .event-logo {
@@ -151,13 +168,15 @@ section:nth-of-type(2n) {
 
 #details .itinerary > div {
   padding: 1rem;
+  padding-left: 0;
 }
 
 #details .date {
-  font-weight: bold;
+  font-family: 'Open Sans Bold', 'Helvetica', sans-serif;
   font-size: 0.8rem;
   text-transform: uppercase;
   margin-bottom: 10px;
+  color: #05C6B4;
 }
 
 #faq .faq-container {
@@ -208,6 +227,7 @@ section:nth-of-type(2n) {
 
 #footer header {
   padding-bottom: 20px;
+  margin: 20px;
 }
 
 #footer .social .content > div {
@@ -244,7 +264,8 @@ section:nth-of-type(2n) {
   background: none;
   border-bottom: 2px solid #FFF;
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  color: #FFF;
 }
 
 #footer input[type="email"]::placeholder {
@@ -290,13 +311,17 @@ section:nth-of-type(2n) {
   overflow: hidden;
 }
 
-#footer .subtitle .underline .text h4 {
-  font-family: 'Arvo Bold';
-  text-transform: uppercase;
-  transform: translateY(0.3em);
+#footer .subtitle .underline .text {
+  transform: translateY(0.2rem);
 }
 
-#footer .subtitle .underline .text:before {
+#footer .subtitle .underline .text h4 {
+  font-family: 'Arvo';
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+#footer .subtitle .underline:before {
   content: "";
   position: absolute;
   z-index: -1;
@@ -304,18 +329,14 @@ section:nth-of-type(2n) {
   right: 0;
   width: 100%;
   bottom: 0;
-  background: #AAB0BF;
-  height: 0.6rem;
+  background: rgba(255,255,255,0.4);
+  height: 0.8rem;
   -webkit-transition-property: right;
   transition-property: right;
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
   -webkit-transition-timing-function: ease-out;
   transition-timing-function: ease-out;
-}
-
-#footer .subtitle .underline .text.light:before {
-  background: rgba(255,255,255,0.6);
 }
 
 #footer .social .content div {
@@ -339,8 +360,7 @@ header.page-title h1 {
   border-radius: 2em;
   text-transform: uppercase;
   font-size: 0.8em;
-  font-family: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
-  font-weight: bolder;
+  font-family: 'Open Sans Bold', 'Helvetica', 'Arial', sans-serif;
   padding: 10px 20px;
   border: none;
   cursor: pointer;
